syntax = "proto3";

package pb;

// // Removed the import statement for "account.proto"
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "service_account.proto";


option go_package = "github.com/vantu-fit/saga-pattern/pb";

// ID          uuid.UUID
// 	CategoryID  uuid.UUID
// 	Name        string
// 	BrandName   string
// 	Description string
// 	Price       uint32
// 	Quantity    uint32

message DetailOrderProduct {
    string id = 1;
    string category_id = 2;
    string name = 3;
    string brand_name = 4;
    string description = 5;
    uint64 price = 6;
    uint64 quantity = 7;
}

message GetOrderByIdRequest {
    string id = 1;
}

message GetOrderByIdResponse {
    string id = 1 ;
    string customer_id = 2;
    repeated DetailOrderProduct products = 3;
    google.protobuf.Timestamp created_at = 4;
}

service ServiceOrder {
    rpc Ping (PingRequest) returns (PingResponse){
        option (google.api.http) = {
                  post: "/api/v1/orders/ping"
                  body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to test the connection.";
          summary: "Test connection";
        };
    }

    rpc GetOrderById (GetOrderByIdRequest) returns (GetOrderByIdResponse){
        option (google.api.http) = {
                  get: "/api/v1/orders/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
          description: "Use this API to get order by id.";
          summary: "Get order by id";
        };
    }
}